--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,9 +19,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
   
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gotu&family=Simonetta&family=Viaoda+Libre&family=Yaldevi:wght@300&display=swap" rel="stylesheet">
+ 
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Fahkwang:wght@300&family=Marmelad&display=swap" rel="stylesheet"><link rel="preconnect" href="https://fonts.googleapis.com">
+ 
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Fahkwang:wght@300&family=Marmelad&family=Xanh+Mono:ital@1&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Ballet:opsz@16..72&family=Fahkwang:wght@400&family=Marmelad&family=Xanh+Mono:ital@1&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
